--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,402 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-*/
-
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--font-main, sans-serif);
+  font-variation-settings: "wght" var(--font-weight-normal, 410);
+  background-image: var(
+    --bg-gradient,
+    repeating-linear-gradient(
+      to bottom,
+      transparent,
+      transparent 2px,
+      #d3d3d3 2px,
+      #d3d3d3 4px
+    ),
+    repeating-linear-gradient(
+      to right,
+      transparent,
+      transparent 2px,
+      #d3d3d3 2px,
+      #d3d3d3 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%)
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.text-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 1);
+  width: var(--block-width, clamp(375px, 50vw + 125px, 700px));
+  margin: 100px 0;
+  border: 2px solid rgba(0, 0, 0, 1);
+  padding: clamp(
+      122px,
+      122px + (130 - 122) * (100vw - 375px) / (1440 - 375),
+      130px
+    )
+    0;
+  gap: 20px;
+}
+
+.header-text {
+  font-family: var(--font-accent, sans-serif);
+  font-weight: 400;
+  font-size: clamp(
+    49px,
+    49px + (65 - 49) * (100vw - 375px) / (1440 - 375),
+    65px
+  );
+  text-transform: uppercase;
+  line-height: 100%;
+}
+
+.header-description {
+  font-family: var(--font-accent, sans-serif);
+  font-weight: 400;
+  font-size: clamp(
+    14px,
+    14px + (23 - 14) * (100vw - 375px) / (1440 - 375),
+    23px
+  );
+  text-transform: uppercase;
+  line-height: 100%;
+}
+
+.card-list_item {
+  background-color: rgba(255, 255, 255, 1);
+  border: 2px solid rgba(0, 0, 0, 1);
+  width: var(--block-width, clamp(375px, 50vw + 125px, 700px));
+  margin-bottom: 48px;
+}
+
+.card-title_block {
+  width: 100%;
+}
+
+.card-title {
+  font-family: var(--font-main, sans-serif);
+  font-variation-settings: "wght" var(--font-weight-bold, 715);
+  font-size: 18px;
+  padding: 4px 10px;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  color: rgba(0, 0, 0, 1);
+  font-size: 14px;
+  font-family: var(--font-accent, sans-serif);
+  font-weight: 400;
+  line-height: 100%;
+  z-index: 2;
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+}
+
+@supports (text-stroke: 1px rgba(255, 255, 255, 1)) {
+  .label {
+    text-stroke: 1px rgba(255, 255, 255, 1);
+  }
+}
+
+.card-image {
+  width: 100%;
+  display: block;
+}
+
+.card-description_block {
+  padding: 25px;
+}
+
+.card-description {
+  font-family: var(--font-main, sans-serif);
+  font-size: 18px;
+  font-variation-settings: "wght" var(--font-weight-normal, 410);
+  line-height: 21px;
+}
+
+.card-description_next-line {
+  display: inline-block;
+  margin-top: 25px;
+}
+
+.buttons-block {
+  display: flex;
+  justify-content: end;
+  margin: 0 25px 25px 0;
+}
+
+.card__icon-button {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+}
+
+.card__like-button {
+  text-align: center;
+
+  width: 130px;
+  height: 38px;
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 1), 0 0 0 1px rgba(0, 0, 0, 1);
+}
+
+.save-button_block {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.save-button {
+  width: clamp(
+    306px,
+    calc(306px + (335 - 306) * (100vw - 375px) / (1440 - 375)),
+    335px
+  );
+  margin: 0 0 100px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 17px 0;
+  gap: 8px;
+}
+
+.save-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 1), 0 0 0 1px rgba(0, 0, 0, 1);
+}
+
+.save-svg {
+  width: 21px;
+  height: 21px;
+}
+
+.button__text {
+  font-family: var(--font-accent, sans-serif);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 90%;
+}
+
+.car-brightless {
+  filter: brightness(80%);
+}
+
+.car-retro {
+  filter: sepia(80%);
+}
+
+.car-purple {
+  filter: hue-rotate(-20deg);
+}
+
+.car-negative {
+  filter: saturate(120%);
+}
+
+.car-bright {
+  filter: brightness(120%);
+}
+
+.car-blur {
+  filter: blur(1.2rem);
+}
+
+.car-orange {
+  filter: hue-rotate(25deg) saturate(170%);
+}
+
+.ok-button,
+.save-button,
+.card__like-button {
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 1);
+  border: 2px solid black;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.ok-button::before,
+.save-button::before,
+.card__like-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.ok-button .button__text,
+.save-button .button__text,
+.save-button .save-svg,
+.card__like-button .button__text {
+  position: relative;
+  color: white;
+  mix-blend-mode: difference;
+  z-index: 1;
+}
+
+.ok-button:hover::before,
+.save-button:hover::before,
+.card__like-button:hover::before {
+  transform: scaleX(1);
+}
+
+dialog[open] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding: 30px;
+}
+
+.dialog-titile {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.dialog-svg {
+  height: 39px;
+  width: 39px;
+}
+
+.dialog-text {
+  text-transform: uppercase;
+  line-height: 150%;
+}
+
+.ok-button {
+  height: 38px;
+  width: clamp(
+    261px,
+    calc(261px + (293 - 261) * (100vw - 375px) / (1440 - 375)),
+    293px
+  );
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.ok-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 1), 0 0 0 1px rgba(0, 0, 0, 1);
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 1);
+  opacity: 75%;
+}
+
+.contour {
+  transition: 0.1s linear;
+}
+
+.main-body {
+  transition: 0.3s linear;
+}
+
+.core {
+  transition: 0.3s 0.03s linear;
+}
+
+.sparks {
+  opacity: 0%;
+}
+
+.like-icon:hover .core {
+  fill: var(--animation-fill-contour, black);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--animation-fill-contour, black);
+  transition: 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .heart {
+  animation: click 0.3s 0.1s ease-in;
+  transform-origin: center;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in;
+}
+
+@media (width <= 376px) {
+  .card-list_item:nth-child(3) {
+    margin-bottom: 50px;
+  }
+
+  .card-list_item:nth-child(5) {
+    margin-bottom: 51px;
+  }
+
+  .card-list_item:nth-child(7) {
+    margin-bottom: 50px;
+  }
+
+  .save-button {
+    flex-direction: column;
+  }
+
+  .save-svg {
+    width: 28px;
+    height: 28px;
+  }
+
+  dialog[open] {
+    padding: 30px 40px;
+  }
 }
