--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,24 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --font-main: "Inter";
+  --font-accent: "PressStart2P";
+  --font-weight-normal: 410;
+  --font-weight-bold: 715;
+  --bg-gradient: repeating-linear-gradient(
+      to bottom,
+      transparent,
+      transparent 2px,
+      #d3d3d3 2px,
+      #d3d3d3 4px
+    ),
+    repeating-linear-gradient(
+      to right,
+      transparent,
+      transparent 2px,
+      #d3d3d3 2px,
+      #d3d3d3 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+  --block-width: clamp(375px, 50vw + 125px, 700px);
+  --animation-fill-contour: black;
+  --animation-fill-color: #ff0000;
+}
