--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -9,7 +9,7 @@
   font-display: swap;
   font-family: 'Inter';
   src: 
-    url('./Inter-Variable.woff2') format('woff2 supports variations'),
+    url('./Inter-Variable.woff2') format('woff2-variations'),
     url('./Inter-Variable.woff2') format('woff2');
   font-weight: 410 715; 
 }
