--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -10,6 +10,6 @@
   font-family: 'Inter';
   src: 
     url('./Inter-Variable.woff2') format('woff2-variations'),
-    url('./Inter-Variable.woff2') format('woff2');
+    url('./Inter-Variable.woff2') format('woff2 supports variations');
   font-weight: 410 715; 
 }
