--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@
   background-color: rgba(255, 255, 255, 1);
   border: 2px solid rgba(0, 0, 0, 1);
   width: var(--block-width, clamp(375px, 50vw + 125px, 700px));
-  margin-bottom: 49px;
+  margin-bottom: 52px;
 }
 
 .card-title_block {
@@ -105,20 +105,17 @@
   z-index: 2;
   opacity: 0.5;
   mix-blend-mode: hard-light;
-text-shadow: 
-1px 0 0 rgba(255, 255, 255, 1),
--1px 0 0 rgba(255, 255, 255, 1),
-0 1px 0 rgba(255, 255, 255, 1),
-0 -1px 0 rgba(255, 255, 255, 1);
+  text-shadow: 1px 0 0 rgba(255, 255, 255, 1), -1px 0 0 rgba(255, 255, 255, 1),
+    0 1px 0 rgba(255, 255, 255, 1), 0 -1px 0 rgba(255, 255, 255, 1);
 }
 
-@supports (-webkit-text-stroke: 1px rgba(255, 255, 255, 1)) or 
-      (text-stroke: 1px rgba(255, 255, 255, 1)) {
-.label {
--webkit-text-stroke: 1px rgba(255, 255, 255, 1);
-text-stroke: 1px rgba(255, 255, 255, 1);
-text-shadow: none; 
-}
+@supports (-webkit-text-stroke: 1px rgba(255, 255, 255, 1)) or
+  (text-stroke: 1px rgba(255, 255, 255, 1)) {
+  .label {
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+    text-stroke: 1px rgba(255, 255, 255, 1);
+    text-shadow: none;
+  }
 }
 
 .card-image {
@@ -130,6 +127,9 @@ text-shadow: none;
 
 .card-description_block {
   padding: 25px;
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
 }
 
 .card-description {
@@ -139,15 +139,11 @@ text-shadow: none;
   line-height: 21px;
 }
 
-.card-description_next-line {
-  display: inline-block;
-  margin-top: 25px;
-}
-
 .buttons-block {
   display: flex;
   justify-content: end;
   margin: 0 25px 25px 0;
+  gap: 7px;
 }
 
 .card__icon-button {
@@ -156,6 +152,20 @@ text-shadow: none;
   border: none;
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: 2px solid transparent;
+  height: 38px;
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: #000;
 }
 
 .card__like-button {
@@ -266,7 +276,11 @@ dialog[open] {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  padding: 30px;
+  padding: 30px; 
+  max-width: 100%; 
+  overflow-x: hidden; 
+  box-sizing: border-box; 
+  position: fixed; 
 }
 
 .dialog-titile {
@@ -286,6 +300,9 @@ dialog[open] {
   font-size: 14px;
   text-transform: uppercase;
   line-height: 150%;
+  display: inline-block;
+  width: auto;
+  max-width: 234px;
 }
 
 .ok-button {
@@ -296,11 +313,12 @@ dialog[open] {
     293px
   );
   background-color: rgba(255, 255, 255, 1);
+  text-transform: uppercase;
 }
 
 .button:focus {
   outline: none;
-  box-shadow: 2px 2px 0 rgba(0, 0, 0, 1), 0 0 0 1px rgba(0, 0, 0, 1);
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 1);
 }
 
 dialog::backdrop {
@@ -369,7 +387,6 @@ dialog::backdrop {
 }
 
 @media (width <= 376px) {
-  
   .save-button {
     flex-direction: column;
   }
@@ -381,5 +398,10 @@ dialog::backdrop {
 
   dialog[open] {
     padding: 30px 40px;
+    width: 341px;
+  }
+
+  .dialog-svg {
+    width: 37%;
   }
 }
